# FINROCK

./: .dockerignore  .gitignore  Dockerfile  README.md  _test_all_modules.py  app.py  credit_env.py  fail_detail.txt  inference.py  openenv.yaml  output.txt  pyproject.toml  run1.json  run3.txt  run4.json  setup.py  setup.sh  test_bank.csv  test_circular_trading.py  test_components.out  test_components.py  test_parsers.py  tmp_output.txt
.gemini/: gsd-file-manifest.json
.gemini/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
creditsense-frontend/: index.html  package-lock.json  package.json
creditsense-frontend/src/: App.css  App.jsx  index.css  main.jsx
creditsense_ai/: Dockerfile  README.md  __init__.py  api.py  logging_utils.py  openenv.yaml  requirements.txt  state_schema.py
creditsense_ai/blockchain/: CreditAuditTrail.sol  contract_abi.json  hardhat.config.js  package-lock.json  package.json  web3_logger.py
creditsense_ai/env/: CreditAppraisalEnv.py  actions.py  reward_logic.py
creditsense_ai/output/: cam_generator.py
creditsense_ai/parsers/: bank_parser.py  gst_parser.py  pdf_parser.py
creditsense_ai/research/: __init__.py  circular_trading.py  promoter_scorer.py  research_agent.py  sector_scorer.py  state_bridge.py
creditsense_ai/tasks/: task1.yaml  (+2 more)
server/: __init__.py  app.py
tests/: test_rewards.py
tools/: full_live_check.py  generate_demo_pdfs.py  smoke_test_backend.py
(+157 files in other folders)
