[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finrock"
version = "1.0.0"
description = "FINROCK / CreditSense AI submission package"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "saicharan1907" }
]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "openai",
  "openenv-core>=0.2.0",
  "requests",
  "websockets",
  "pydantic",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["creditsense_ai*"]

